--- a/campaigns/InThyBlood/001.md
+++ b/campaigns/InThyBlood/001.md
@@ -25,4 +25,4 @@ LIST without ID "["+ title + "](" + regexreplace(file.path, ".md", "") + ")" + "
 ---
 {% endcomment %}
 
-![](../../Pasted%20image%2020251130175014.png)
+![](../../imgs/gallery/Pasted%20image%2020251130175014.png)
