--- a/campaigns/InThyBlood/001.md
+++ b/campaigns/InThyBlood/001.md
@@ -3,14 +3,15 @@ layout: default
 type: session
 nav_exclude: false
 
-title: Begin
+title: Travel to Lucatore
 parent: In Thy Blood
-region: 
-nav_order: 2595-03-15
+region: Northern Purgare
+nav_order: 2595-04-15
 narration: 
 footer_content: 
 
-images: 
+images:
+- ../../imgs/gallery/Pasted%20image%2020251130175014.png
 
 hooks:
 
@@ -25,4 +26,32 @@ LIST without ID "["+ title + "](" + regexreplace(file.path, ".md", "") + ")" + "
 ---
 {% endcomment %}
 
-![](../../imgs/gallery/Pasted%20image%2020251130175014.png)
+An improbable group is formed.
+Unknown to them, they are called the [Altair Envoys](../../directory/Purgare/AltairEnvoys/index.md).
+
+[Maren](../../directory/Purgare/AltairEnvoys/Maren.md), a Hellvetics Granadier, takes a leadership position.
+[Kuno](../../directory/Purgare/AltairEnvoys/Kuno.md), her junior in the cult, a Hellvetics Corporal, follows her orders to the letter.
+They have their orders.
+This is not an investigation, but damage control: the Elysian Oils have to continue to flow, for the sake of the Alp's businesses.
+
+Accompanying them, [IO](../../directory/Purgare/AltairEnvoys/IO.md), a Chronicler Agent, and [Thread](../../directory/Purgare/AltairEnvoys/Thread.md), a Chronicler Bit.
+The chroniclers are tasked with understanding the plot behind Altair's murder.
+Information is money.
+
+[Anastasia](../../gazetteer/Pollen/ProtectorateClique/Anastasia.md) was just passing through.
+The assassination interested her.
+She has not shared her goals yet.
+
+At the halfway point of the first day of travel to [Lucatore](../../directory/Purgare/NorthernPurgare/Lucatore.md), the Envoys approach a checkpoint cabin.
+A Hellvetics Soldier relaxes inside.
+He had orders to go to Lucatore for equipment inspection, but decided to stop here when a scout brought the news of Altair's murder.
+Maren commands the young man to carry out his orders.
+
+One hour later, further in the road, the group notices they are being observed by a drone.
+Maren shoots it down, and IO investigates its components.
+Half an hour further, the same young Hellvetic is found shot dead, with a poison dart.
+
+IO hypothesise it could have been shot from the drone.
+The others search, with no success, for the marksman's trail.
+
+
