--- a/campaigns/InThyBlood/001.md
+++ b/campaigns/InThyBlood/001.md
@@ -6,7 +6,7 @@ nav_exclude: false
 title: Travel to Lucatore
 parent: In Thy Blood
 region: Northern Purgare
-nav_order: 2595-04-15
+nav_order: 2595-04-16
 narration: 
 footer_content: 
 
@@ -33,7 +33,7 @@ Unknown to them, they are called the [Altair Envoys](../../directory/Purgare/Alt
 They have their orders.
 This is not an investigation, but damage control: the Elysian Oils have to continue to flow, for the sake of the Alp's businesses.
 
-Accompanying them, [IO](../../directory/Purgare/AltairEnvoys/IO.md), a Chronicler Agent, and [Thread](../../directory/Purgare/AltairEnvoys/Thread.md), a Chronicler Bit.
+Accompanying them are [IO](../../directory/Purgare/AltairEnvoys/IO.md), a Chronicler Agent, and [Thread](../../directory/Purgare/AltairEnvoys/Thread.md), a Chronicler Bit.
 The chroniclers are tasked with understanding the plot behind Altair's murder.
 Information is money.
 
@@ -41,7 +41,7 @@ Information is money.
 The assassination interested her.
 She has not shared her goals yet.
 
-At the halfway point of the first day of travel to [Lucatore](../../directory/Purgare/NorthernPurgare/Lucatore.md), the Envoys approach a checkpoint cabin.
+At the halfway point of the first day of travel to [index](../../directory/Purgare/Lucatore/index.md), the Envoys approach a checkpoint cabin.
 A Hellvetics Soldier relaxes inside.
 He had orders to go to Lucatore for equipment inspection, but decided to stop here when a scout brought the news of Altair's murder.
 Maren commands the young man to carry out his orders.
