--- a/campaigns/InThyBlood/002.md
+++ b/campaigns/InThyBlood/002.md
@@ -33,14 +33,14 @@ Outside the walls, they can stay in the Commission House.
 A young maidservant, [Dana](../../directory/Purgare/Lucatore/Dana.md), prepares dinner and prepares their bedroom.
 
 In an intimate conversation, Dana shares with [Anastasia](../../gazetteer/Pollen/ProtectorateClique/Anastasia.md) what she believes.
-"Only the Jehhamedans could have killed Altair. It is belated revenge for the Adriatic wars."
+> "Only the Jehhamedans could have killed Altair. It is belated revenge for the Adriatic wars."
 
 A few hours before sunrise, [Maren](../../directory/Purgare/AltairEnvoys/Maren.md) is awakened to the shouts of a drunken man under her window.
-"(...) the horny old man (...)"
+> "(...) the horny old man (...)".
 The Grenadier carefully looks and sees the men carrying an Anabaptist Bidenhander.
 
 The man repeats, parts in an unknown dialect.
-"The horny old man has had (...) wants to hand over Lucatore (...) Bergamo family!"
+> "The horny old man has had (...) wants to hand over Lucatore (...) Bergamo family!"
 
 ## Early morning
 
@@ -52,13 +52,13 @@ Maren and Kuno follow them.
 Atop the defence tower, the Hellvetics realise they have been sold contraband Hellvetica ammo.
 They are given a name: [Acilio](../../directory/Purgare/AlpsContrabandRaiders/Acilio.md).
 Maren apprehends the contraband rounds.
-Later the Alpine soldiers learn that Acilio lives north of the Eden Route, up in the mountains.
+Later, the Alpine soldiers learn that Acilio lives north of the Eden Route, up in the mountains.
 
 Maren and Kuno ask around for a radio station and are led to the water towers.
 From there, they send a report to their Alpine command, including findings on the Hellvetica rounds they apprehended.
 
 While at it, Kuno sneakily overhears a heated conversation between a [Spitalian](../../directory/Purgare/Lucatore/CarminoFerro.md) and a [big Anabaptist man](../../directory/Purgare/HouseBenesato/Lucio.md):
-"...tell Emissary Neva that I will find the killer, no matter how!"
+> "...tell Emissary Neva that I will find the killer, no matter how!"
 The Anabaptist is soon called to the wall and leaves the Spitalian by himself.
 
 Kuno approaches the Spitalian, who introduces himself as Carmino Ferro.
@@ -80,7 +80,7 @@ She impresses the man with her conduct, but unfortunately, he cannot invite her 
 Anastasia is promised she will be called for a meeting with Ennio later that same day.
 
 As the Cossack approaches Thread, they both overhear a Benesato family member, this time an old weaver called Miranda Benesato.
-"Before the Broken Cross came, my Clan was decent and honourable. Only Ennio can restore our dignity."
+> "Before the Broken Cross came, my Clan was decent and honourable. Only Ennio can restore our dignity."
 
 At that moment, Anastasia and Thread looked like a small family in the middle of the square.
 They can see the two large Hellvetics, their new companions, entering the local inn, the [BleedingRam](../../directory/Purgare/Lucatore/BleedingRam.md).
