--- a/campaigns/InThyBlood/001.md
+++ b/campaigns/InThyBlood/001.md
@@ -41,7 +41,7 @@ Information is money.
 The assassination interested her.
 She has not shared her goals yet.
 
-At the halfway point of the first day of travel to [index](../../directory/Purgare/Lucatore/index.md), the Envoys approach a checkpoint cabin.
+At the halfway point of the first day of travel to [Lucatore](../../directory/Purgare/Lucatore/index.md), the Envoys approach a checkpoint cabin.
 A Hellvetics Soldier relaxes inside.
 He had orders to go to Lucatore for equipment inspection, but decided to stop here when a scout brought the news of Altair's murder.
 Maren commands the young man to carry out his orders.
