--- a/campaigns/InThyBlood/002.md
+++ b/campaigns/InThyBlood/002.md
@@ -27,7 +27,7 @@ LIST without ID "["+ title + "](" + regexreplace(file.path, ".md", "") + ")" + "
 
 ## Late arrival
 
-The [Altair Envoys](../../directory/Purgare/AltairEnvoys/index.md) arrive at [index](../../directory/Purgare/Lucatore/index.md) at the end of the day.
+The [Altair Envoys](../../directory/Purgare/AltairEnvoys/index.md) arrive at [Lucatore](../../directory/Purgare/Lucatore/index.md) at the end of the day.
 The gates are closed.
 Outside the walls, they can stay in the Commission House.
 A young maidservant, [Dana](../../directory/Purgare/Lucatore/Dana.md), prepares dinner and prepares their bedroom.
