--- a/campaigns/InThyBlood/002.md
+++ b/campaigns/InThyBlood/002.md
@@ -57,9 +57,11 @@ Later, the Alpine soldiers learn that Acilio lives north of the Eden Route, up i
 Maren and Kuno ask around for a radio station and are led to the water towers.
 From there, they send a report to their Alpine command, including findings on the Hellvetica rounds they apprehended.
 
-While at it, Kuno sneakily overhears a heated conversation between a [Spitalian](../../directory/Purgare/Lucatore/CarminoFerro.md) and a [big Anabaptist man](../../directory/Purgare/HouseBenesato/Lucio.md):
+While at it, Kuno sneakily overhears a heated conversation between a [Spitalian](../../directory/Purgare/Lucatore/CarminoFerro.md) and a [big Anabaptist man](../../directory/Purgare/TheCloister/Lucio.md):
+
 > "...tell Emissary Neva that I will find the killer, no matter how!"
-The Anabaptist is soon called to the wall and leaves the Spitalian by himself.
+
+The Anabaptist is soon called to the wall and leaves the Spitalian on his own.
 
 Kuno approaches the Spitalian, who introduces himself as Carmino Ferro.
 He was the personal doctor of Altair, and he is enraged that his patient was buried without his autopsy.
@@ -76,7 +78,7 @@ They both seem to be looking for something else that is not in front of them.
 The Anabaptist, quicker to realise this was not going anywhere, moves on.
 
 [Anastasia](../../gazetteer/Pollen/ProtectorateClique/Anastasia.md) introduces herself to the doorman of House Benesato.
-She impresses the man with her conduct, but unfortunately, he cannot invite her to speak with the head of the family, [EnnioBenesato](../../directory/Purgare/HouseBenesato/EnnioBenesato.md).
+She impresses the man with her conduct, but unfortunately, he cannot invite her to speak with the head of the family,  [Ennio Benesato](../../directory/Purgare/HouseBenesato/EnnioBenesato.md).
 Anastasia is promised she will be called for a meeting with Ennio later that same day.
 
 As the Cossack approaches Thread, they both overhear a Benesato family member, this time an old weaver called Miranda Benesato.
