--- a/campaigns/InThyBlood/003.md
+++ b/campaigns/InThyBlood/003.md
@@ -11,7 +11,6 @@ narration:
 footer_content: 
 
 images:
-- ../../imgs/gallery/Pasted%20image%2020260215094404.png
 
 hooks:
 
@@ -38,9 +37,9 @@ As she leaves, two young, strong men enter.
 One of them unapologetically bangs his shoulders on the Hellvetic's.
 
 The young [Nero Vex](../../directory/Purgare/AltairEnvoys/NeroVex.md) sits by the bar, inside.
-He sees the two men entering, and a drunk spits at their feet.
+He sees the two men entering, and [a drunk](../../directory/Purgare/TheCloister/Ambroggio.md) spits at their feet.
 A heated discussion ensues, but Nero interjects by throwing his drinks in the middle of it.
-After a moment of silence and awkwardness, it is clearer who is on each side: it will be 5-to-2.
+After a moment of silence and awkwardness, it becomes clearer who is on each side: 5-to-2.
 
 A bar fight starts, and other patrons leave the bar.
 A man at the corner sends his dog to it, which bites randomly, finally stopping the violence.
@@ -60,7 +59,9 @@ He needs help from benevolent, independent thinkers who can find his brother‘s
 
 Gala detests the Anabaptists, hates their foolishness, their bad teeth and stinking hair.
 Anabaptists are scum.
+
 > "They buried Altair even before his brother could say his farewell!"  
+
 She leaves the table, sick with all of it.
 
 Anastasia agrees to find the killer.
@@ -70,7 +71,7 @@ Ennio promises a thousand dinars if she and her group are successful.
 ## Plans
 
 Maren uses the few hours to design and convince the guards of a plan to catch [Acilio](../../directory/Purgare/AlpsContrabandRaiders/Acilio.md). 
-The guards will radio the trafficker to request supplies and help with fixing a rifle.
+The guards will radio the trafficker to request supplies and to help fix a rifle.
 If the man is convinced, he should be here in about 3 days.
 
 Happy with her plan, she comes back to the market square.
